--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 		<script src="js/html5shiv.js"></script>
 		<link rel="stylesheet" media="screen" href="css/ie.css">
 		<![endif]-->
+		<script type='text/javascript' src='//pl22595056.profitablegatecpm.com/8f/c8/a5/8fc8a505f5b30f048ed13346111ea70b.js'></script>
 	</head>
 	<body class="page1" id="top">
 <!--==============================header=================================-->
